Fixed friends page overflow problem

--- a/frontend/src/app/Friends/Friends.module.css
+++ b/frontend/src/app/Friends/Friends.module.css
@@ -1,12 +1,11 @@
 .container{
  display: flex;
  flex-direction: column;
- align-items: center;
- width: 100vw;
+ text-align: center;
  color: var(--text-primary);
  padding-bottom: 16px;
  gap: 8px;
- min-width: 100vw;
+ overflow: hidden;
 }
 
 .list_of_friends {
@@ -15,6 +14,7 @@
   align-items: center;
   gap: 16px;
   width: 100%;
+  margin: 0 auto;
 }
 
 .friend_info {
@@ -42,6 +42,7 @@
   margin-top: 8px;
   gap: 8px;
   width: 100%;
+  margin: 0 auto;
   justify-content: center;
 }
 
